poppr 1.1.4.99
===========

poppr 1.1.4
===========
BUG FIX
* Fixed an internal bug that fails only on Windows OS.

poppr 1.1.3
===========
NEW FEATURES
* new arguments to `plot_poppr_msn` to allow for easier manipulation of node sizes and of labeling
* read.genalex can now take read text connections as input. Addresses issue #8
* users can now specify cutoff for missing values in `aboot`

BUG FIX
* Fixed issue where monomorphic loci would cause an error in `recode_polyploids`
* Fixed logical error that would cause The infinite alleles model of Bruvo's distance to inflate the distance. (Found by Michael Metzger. Addresses issue #5).
* AMOVA can now take subset genclone objects (Addresses issue #7).
* in `mlg.table`, the mlgsub argument will now subset by name instead of index (fixed in #7).
* Fixed issue for neighbor-joining trees where the internal function to fix negative branch lengths was accidentally shuffling the corrected branches. Addresses issue #11.
* `diss.dist` can now be used with `aboot`

MISC
* `info_table` will print a discrete scale as opposed to colorbar when type = "ploidy"
* attempted to make model choices for Bruvo's distance more clear in the documentation

poppr 1.1.2
===========
BUG FIX
* Fixed memory allocation bug (Further addresses issue #2).
* Memory allocated in C function bruvo_dist is now properly freed.

poppr 1.1.1
===========
BUG FIX
* Fixed bug where the loss and add options for Bruvo's distance were switched. 
* Fixed illegal memory access error by UBSAN. Made memory management of internal C functions more sane. (Addresses issue #2).
* Fixed directional quotes and em-dashes produced by Mavericks (Addresses issue #3).

poppr 1.1.0
===========
NEW FEATURES
* Polyploids with ambiguous genotypes are now supported in poppr. See documentation for `recode_polyploids` for details. 