@@ -1,5 +1,9 @@
 poppr 1.1.4.99
 ===========
+BUG FIX
+* Fixed internal bug for fix_negative_branch when only one branch had a negative edge.
+* Fixed bug in `diss.dist` where a single locus would return an error.
+* Fixed bug in poppr.amova where a single locus would return an error due to `repool_haplotypes`.
 
 poppr 1.1.4
 ===========
